tests/baselines/reference/parserClassDeclaration13(strict=true).errors.txt
parserClassDeclaration13.ts(2,4): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
parserClassDeclaration13.ts(3,4): error TS2389: Function implementation name must be 'foo'.


==== parserClassDeclaration13.ts (2 errors) ====
    class C {
       foo();
       ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
       bar() { }
       ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }